--- a/packages/youtube_player_iframe/assets/player.html
+++ b/packages/youtube_player_iframe/assets/player.html
@@ -10,12 +10,12 @@
         margin: 0;
         width: 100%;
         height: 100%;
-        background-color: black;
+        background-color: transparent;
       }
       html {
         width: 100%;
         height: 100%;
-        background-color: black;
+        background-color: transparent;
       }
 
       .embed-container iframe,
@@ -26,9 +26,12 @@
         left: 0;
         width: 100% !important;
         height: 100% !important;
+        background-color: transparent;
       }
     </style>
     <title>Youtube Player</title>
+
+    <script type="text/javascript" src="https://www.youtube.com/iframe_api"></script>
   </head>
 
   <body>
@@ -36,17 +39,13 @@
       <div id="player"></div>
     </div>
 
-    <script>
-      var tag = document.createElement("script");
-      tag.src = "https://www.youtube.com/iframe_api";
-      var firstScriptTag = document.getElementsByTagName("script")[0];
-      firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
-
+    <script type="text/javascript">
       var platform = "<<platform>>";
       var player;
       function onYouTubeIframeAPIReady() {
         player = new YT.Player("player", {
           playerVars: <<playerVars>>,
+          videoId: '<<videoId>>',
           events: {
             onReady: function (event) {
               sendMessage('Ready', event);
